# rustyuploader

./: Cargo.toml  README.md
src/: archive.rs  config.rs  json.rs  lib.rs  loader.rs  sandbox.rs  time.rs  upload.rs  watch.rs
src/lot/: collection.rs  data.rs  mod.rs  tests.rs
tests/: helpers.rs  integration_tests.rs
tests/config/: config.json  dw.json
